# database_health_check

./: .gitignore  README.md  pyproject.toml
database_health_checks/: __init__.py  check_registry.py  databases.example.yaml  inventory.py  oracle_health_check.py  validation_manager.py  validation_rules.yaml
database_health_checks/checks/: archivelog_mode_check.py  audit_trail_purge_job_check.py  control_file_multiplexing_check.py  datafiles_asm_check.py  db_files_min_check.py  dism_enabled_check.py  flashback_enabled_check.py  force_logging_check.py  job_class_log_retention_check.py  job_queue_processes_min_check.py  jobs_enabled_min_check.py  management_pack_check.py  memory_target_required_check.py  open_cursors_min_check.py  open_dblinks_max_check.py  optimizer_mode_check.py  password_validation_function_check.py  pdb_save_state_check.py  pga_aggregate_limit_required_check.py  pga_aggregate_target_required_check.py  processes_min_check.py  recovery_logs_asm_check.py  redo_log_size_check.py  scheduler_jobs_status_check.py  scheduler_log_retention_check.py  sga_max_size_required_check.py  sga_target_min_gb_check.py  statistics_level_check.py  unified_auditing_enabled_check.py  validation_check.py
database_health_checks/models/: __init__.py  check_base_model.py  check_catagory.py  check_result.py  database_config.py  health_check_config.py
database_health_checks/oracle_checks/: control_file_multiplexing_check.py  flashback_enabled_check.py  job_class_log_retention_check.py  job_queue_processes_min_check.py  open_dblinks_max_check.py  password_validation_function_check.py  pdb_save_state_check.py  pga_aggregate_limit_required_check.py  recovery_logs_asm_check.py  redo_log_size_check.py  sessions_min_check.py  sga_max_size_required_check.py  statistics_level_check.py  validation_check.py
database_health_checks/reports/: index.html  oracle_health_check_FREE_20251205_091224.html  oracle_health_check_FREE_20251205_091227.html  oracle_health_check_FREE_20251205_091727.html  oracle_health_check_FREE_20251205_091754.html  oracle_health_check_FREE_20251205_092015.html  oracle_health_check_FREE_20251205_092306.html  oracle_health_check_FREE_20251205_092310.html  oracle_health_check_FREE_20251205_093029.html  oracle_health_check_FREE_20251205_164324.html  oracle_health_check_FREE_20251205_164654.html  oracle_health_check_FREE_20251205_164839.html
database_health_checks/templates/: index.html  report.html  report_mui.html
